# wtfui

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MANIFEST.md  Makefile  README.md  build_static.py  dev  fllow.md  flowbyte-v2.md  install.sh  package.json  pyproject.toml  terminal-apps.md
.cursor/commands/: brainstorm.md  context.md  execute.md  noslop.md  notes.md  plan.md
.cursor/rules/: brainstorming-workflow.mdc  code-review.mdc  code-reviewer.mdc  context-check.mdc  debugging-workflow.mdc  diagram-generation.mdc  diagram-generator.mdc  execution-workflow.mdc  planning-workflow.mdc  security-review.mdc  security-reviewer.mdc  session-notes.mdc  tdd-workflow.mdc
.cursor/skills/: code-review-standards.md  finishing-a-development-branch.md  systematic-debugging.md  test-driven-development.md  using-git-worktrees.md  verification-before-completion.md
.github/workflows/: gatekeeper-audit.yml
.serena/: project.yml
docs/plans/: 2025-12-02-auto-mount-leaf-nodes.md  2025-12-02-console-demo.md  2025-12-02-console-renderer.md  2025-12-02-critical-path-test-coverage.md  2025-12-02-flow-framework.md  2025-12-02-flowbyte-compiler.md  2025-12-02-gatekeeper-suite.md  2025-12-02-interactive-dev-script.md  2025-12-02-missing-features.md  2025-12-02-post-refactor-review.md  2025-12-02-yoga-layout.md  2025-12-03-move-console-demo-to-examples.md  flowbyte-v2-implementation.md
docs/plans/implemented/: 2025-12-02-yoga-layout.md  2025-12-02-yoga-parity-gaps.md  2025-12-02-yoga-remaining-gaps.md
examples/01_todo/: README.md  app.py
examples/chat/: README.md  app.py  pyproject.toml
examples/chat/components/: chat_bubble.py
examples/chat/server/: rpc.py
examples/chat/tests/: conftest.py
examples/console/: README.md  app.py  inline_counter.py  llm_chat.py  pyproject.toml  state.py
examples/console/components/: dashboard.py  process_list.py  progress_bar.py
examples/console/tests/: conftest.py  test_dashboard.py  test_dashboard_positions.py  test_dashboard_with_psutil.py  test_integration.py  test_process_list.py  test_progress_bar.py  test_state.py
examples/dashboard/: README.md  app.py  pyproject.toml
examples/dashboard/components/: __init__.py  metric_card.py  sidebar.py
examples/dashboard/tests/: conftest.py  test_components.py
examples/todo/: README.md  app.py  pyproject.toml  storage.py
examples/todo/tests/: conftest.py  test_app.py
scripts/: release.sh  run-e2e.sh
src/flow/: __init__.py  cli.py  component.py  computed.py  context.py  effect.py  element.py  injection.py  rpc.py  signal.py
src/flow/cli/: __init__.py  demo.py
src/flow/compiler/: __init__.py  analyzer.py  cache.py  css.py  evaluator.py  flowbyte.py  graph.py  importer.py  intrinsics.py  linker.py  opcodes.py  parallel.py  transformer.py  validator.py  writer.py
src/flow/dev/: __init__.py  splitter.py
src/wtfui/: __init__.py
tests/: conftest.py  test_all_exports.py  test_ast_splitter.py  test_build_artifacts.py  test_cli.py  test_cli_build.py  test_cli_demo.py  test_cli_flowbyte.py  test_cli_fusebyte.py  test_cli_integration.py  test_compiler_importer.py  test_compiler_transformer.py  test_component.py  test_computed.py  test_config.py  test_console_ansi.py  test_console_buffer.py  test_console_cell.py  test_console_diff.py  test_console_input.py  test_console_integration.py  test_console_renderer.py  test_console_terminal.py  test_console_theme.py  test_context.py  test_dashboard.py  test_dev_script.py  test_dom_renderer.py  test_dom_renderer_events.py  test_e2e_integration.py  test_effect.py  test_element.py  test_element_focus.py  test_element_layout.py  test_element_reactive_layout.py  test_element_render_node.py  test_except_syntax_bugs.py  test_exports.py  test_flowbyte_compiler.py  test_flowbyte_e2e.py  (+56 more)
tests/compiler/: test_analyzer.py  test_cache.py  test_css.py  test_e2e_flowbyte.py  test_e2e_fusebyte.py  test_evaluator.py  test_fusebyte_functions.py  test_fusebyte_optimizer.py  test_graph.py  test_linker.py  test_opcodes.py  test_optimizer.py  test_parallel.py  test_parallel_css.py  test_pipeline.py  test_registry.py  test_rpc_compilation.py  test_shaker.py  test_sourcemap.py  test_stack_machine.py  test_styling.py  test_validator.py  test_vm_integration.py  test_vm_parity.py
tests/core/: __init__.py  test_core_purity.py  test_reactivity.py  test_signal.py
tests/e2e/: conftest.py  test_todo_e2e.py
tests/element/: test_layout_caching.py
tests/examples/: test_chat_rpc.py  test_dashboard_components.py  test_todo_app.py  test_todo_storage.py
tests/gatekeepers/: conftest.py  test_bundle.py  test_concurrency.py  test_flowbyte_size.py  test_fusebyte_size.py  test_latency.py  test_layout_perf.py  test_memory.py  test_parallel_compilation.py  test_reactivity.py  test_security.py  test_sourcemap.py  test_treeshaking.py  utils.py
tests/integration/: __init__.py  test_visual_fidelity.py
tests/layout/: test_absolute.py  test_algorithm.py  test_align_content.py  test_aspect_ratio.py  test_baseline.py  test_baseline_integration.py  test_cache.py  test_compute.py  test_direction.py  test_flexline.py  test_hit_test.py  test_intrinsic.py  test_measure.py  test_node.py  test_parallel.py  test_reactive.py  test_style.py  test_types.py  test_vstack_hstack_grow.py
tests/renderer/: test_protocol.py
tests/runtime/: test_click_dispatch.py  test_layout_mapping.py  test_reactive_integration.py  test_router.py  test_tui_async.py  test_tui_focus.py  test_tui_inline.py  test_tui_layout_update.py  test_tui_reactivity_integration.py  test_tui_rebuild.py  test_tui_runtime.py
tests/server/: test_sourcemap_endpoint.py
tests/testing/: test_driver.py  test_driver_keyboard.py  test_locator.py  test_snapshot.py  test_stabilize.py
tests/tui/: __init__.py  test_adapter.py  test_console_renderer.py  test_reactive_adapter.py  test_tui_sovereignty.py
tests/ui/: test_elements_style.py  test_for_each.py  test_for_integration.py  test_input.py  test_leaf_syntax.py  test_text_reactive.py
tests/web/: __init__.py  test_renderers.py  test_web_sovereignty.py
(+140 files in other folders)
