[project]
name = "flow"
version = "0.1.0"
description = "A Pythonic UI framework using context managers and signals"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",  # For FastAPI TestClient
    "pytest-cov>=7.0.0",
    "playwright>=1.56.0",
    "pytest-playwright>=0.7.2",
]

[project.scripts]
flow = "flow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flow"]

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

# ============================================================================
# Ruff Configuration (Linting + Formatting)
# ============================================================================
[tool.ruff]
line-length = 100
# Note: py314 not yet supported by ruff, using py313 as target
# The framework requires Python 3.14+ for No-GIL and PEP 649
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async (important for async framework)
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI uses this)
    "S101",   # use of assert (ok in tests)
    "ARG001", # unused function argument (ok for protocol implementations)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert is fine in tests
    "ARG",    # unused arguments ok in tests (fixtures)
    "S105",   # hardcoded passwords ok in tests
    "S106",   # hardcoded passwords ok in tests
    "S603",   # subprocess calls ok in tests (E2E fixtures)
    "S607",   # partial executable paths ok in tests
]
"examples/**/*.py" = [
    "S101",   # assert ok in examples
]

[tool.ruff.lint.isort]
known-first-party = ["flow"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ============================================================================
# Mypy Configuration (Type Checking)
# ============================================================================
[tool.mypy]
# Note: mypy uses "3.14" format (not py314)
python_version = "3.13"  # Use 3.13 until mypy fully supports 3.14
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Enable incremental mode for faster subsequent runs
incremental = true
cache_dir = ".mypy_cache"

# Namespace packages support (src layout)
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

# Per-module configuration
[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "websockets.*",
    "click.*",
    "playwright.*",
    "pytest_playwright.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# Slightly relaxed for tests
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ============================================================================
# Bandit Configuration (Security)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = [
    "B101",  # assert_used - ok in non-test code for invariants
]

# ============================================================================
# Coverage Configuration (for future use)
# ============================================================================
[tool.coverage.run]
source = ["src/flow"]
branch = true
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
