[project]
name = "wtfui-example-chat"
version = "0.1.0"
description = "Chat app example for WtfUI framework - demonstrates @rpc for server functions"
requires-python = ">=3.14"
dependencies = ["wtfui"]

[tool.uv.sources]
wtfui = { path = "../..", editable = true }

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.wtfui]
name = "chat"
entry = "app.py"
export = "app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
